# Do-fenshmirtz

./: .gitignore  Cargo.toml  index.html
src/: lib.rs  main.rs  router.rs
src/sections/: home.rs  mod.rs
src/sections/components/: mod.rs  sidebar.rs  task.rs
src/sections/components/building_blocks/: image_buttons.rs  mod.rs  text_input.rs
src/sections/settings/: account.rs  lib.rs  mod.rs  notifications.rs  preferences.rs
