[package]
name = "do-fenshmirtz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
gloo = "0.8.0"
stylist = { version = "0.11", features = ["yew"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.63", features = ["HtmlInputElement"] }
yew-router = "0.17"
yewdux = "0.9.3"
serde = "1.0.164"
